# SHADERed

./: .clang-format  .gitignore  .gitmodules  CHANGELOG.txt  CMakeLists.txt  EditorEngine.cpp  EditorEngine.h  GUIManager.cpp  GUIManager.h  HLSLed.sln  HLSLed.vcxproj  InterfaceManager.cpp  InterfaceManager.h  LICENSE  Options.h  README.md  SHADERed.sln  SHADERed.vcxproj  TODO.md  TUTORIAL.md  build_macos.sh  imgui.ini  install_manifest.txt  main.cpp  pixel.hlsl  resource.rc  settings.ini  shortcuts.kb  test.sprj  vcpkg.json  vertex.hlsl
.github/: FUNDING.yml
.github/workflows/: format.yml  linux.yml  windows.yml
Engine/: GLUtils.cpp  GLUtils.h  GeometryFactory.cpp  GeometryFactory.h  Model.cpp  Model.h  Ray.cpp  Ray.h  Timer.cpp  Timer.h
ImGUI/: TextEditor.cpp  TextEditor.h  imgui.cpp  imgui_dock.cpp  imgui_dock.h  imgui_impl_dx11.cpp  imgui_impl_dx11.h  imgui_impl_win32.cpp  imgui_impl_win32.h
Misc/: Keyboard.txt  tips.xml
Misc/GitHooks/: canonicalize_filename.sh  pre-commit  pre-commit-clang-format
Misc/Icon/: README.md
Misc/Linux/: io.github.dfranx.SHADERed.appdata.xml  io.github.dfranx.SHADERed.desktop  org.shadered.SHADERed.appdata.xml
Objects/: ArcBallCamera.cpp  ArcBallCamera.h  AudioAnalyzer.cpp  AudioAnalyzer.h  AudioShaderStream.cpp  AudioShaderStream.h  Camera.cpp  Camera.h  CameraSnapshots.cpp  CameraSnapshots.h  DebugInformation.cpp  DebugInformation.h  DefaultState.cpp  DefaultState.h  FirstPersonCamera.cpp  FirstPersonCamera.h  FunctionVariableManager.cpp  FunctionVariableManager.h  GLSL2HLSL.cpp  GLSL2HLSL.h  GizmoObject.cpp  GizmoObject.h  HLSL2GLSL.cpp  HLSL2GLSL.h  HLSLFileIncluder.h  InputLayout.cpp  InputLayout.h  KeyboardShortcuts.cpp  KeyboardShortcuts.h  Logger.cpp  Logger.h  MessageStack.cpp  MessageStack.h  Names.cpp  Names.h  ObjectManager.cpp  ObjectManager.h  PipelineItem.h  PipelineManager.cpp  PipelineManager.h  (+20 more)
Objects/Debug/: PixelInformation.h
Objects/Export/: ExportCPP.cpp  ExportCPP.h
Objects/PluginAPI/: Plugin.h  PluginData.h  PluginManager.cpp  PluginManager.h
UI/: CodeEditorUI.cpp  CodeEditorUI.h  CreateItemUI.cpp  CreateItemUI.h  CubemapPreview.cpp  CubemapPreview.h  ErrorListUI.cpp  ErrorListUI.h  Icons.h  MessageOutputUI.cpp  MessageOutputUI.h  ObjectListUI.cpp  ObjectListUI.h  ObjectPreviewUI.cpp  ObjectPreviewUI.h  OptionsUI.cpp  OptionsUI.h  PinnedUI.cpp  PinnedUI.h  PipelineUI.cpp  PipelineUI.h  PixelInspectUI.cpp  PixelInspectUI.h  PreviewUI.cpp  PreviewUI.h  PropertyUI.cpp  PropertyUI.h  UIHelper.cpp  UIHelper.h  UIView.h  VariableValueEdit.cpp  VariableValueEdit.h
UI/Debug/: BreakpointListUI.cpp  BreakpointListUI.h  FunctionStackUI.cpp  FunctionStackUI.h  ImmediateUI.cpp  ImmediateUI.h  ValuesUI.cpp  ValuesUI.h  WatchUI.cpp  WatchUI.h
UI/Tools/: CubemapPreview.cpp  CubemapPreview.h  Magnifier.cpp  Magnifier.h
cmake/: FindSFML.cmake
data/: FXAA.hlsl  settings.ini  shortcuts.kb
examples/AmbientOcclusion/: ambientocclusion.sprj  diffuse.dds
examples/AmbientOcclusion/shaders/: SimplePS.hlsl  SimpleVS.hlsl  StatuePS.hlsl  StatueVS.hlsl
examples/Common/: cathedral.dds  environment.DDS
examples/DeferredRendering/: deferred.sprj
examples/DeferredRendering/shaders/: ProcessingPS.hlsl
examples/DepthOfField/: Cube.x  Teapot.x  dof.sprj
examples/DepthOfField/shaders/: DOF1PS.hlsl  DOF2PS.hlsl  DownsamplePS.hlsl  DownsampleVS.hlsl  Gaussian1PS.hlsl  Gaussian2PS.hlsl  ObjectsPS.hlsl  ObjectsVS.hlsl
examples/Edge/: edge.sprj
examples/Edge/shaders/: EdgePS.hlsl  SimpleVS.hlsl
examples/Eroded/: eroded.sprj
examples/Eroded/shaders/: SimplePS.frag  SimpleVS.vert
examples/GLSLsimple/: pixel.frag  simple.sprj
examples/GLSLsimple/shaders/: LightVS.vert  SimplePS.frag
examples/GeometryShader/: geometryshader.sprj
examples/GeometryShader/shaders/: SimpleGS.hlsl
examples/HLSLsimple/: simple.sprj
examples/Refraction/: refraction.sprj
examples/Refraction/shaders/: RefractionPS.hlsl  RefractionVS.hlsl  SimplePS.hlsl  SimpleVS.hlsl
examples/SHADERtoy/ProceduralGradientVisualizer/: procgradvis.sprj
examples/SHADERtoy/Raymarching/: README.txt  pixel.frag  (+2 more)
examples/SSAO/: ssao.sprj
examples/Sobel/: README.txt  sobel.sprj
examples/Texture/: texture.sprj
examples/Toon/: toon.sprj
examples/blend/: blend.sprj  vertex.hlsl
examples/changevarval/: changevarval.sprj
examples/cubemap/: cubemap.sprj  earth.dds  pixel.hlsl
examples/geoshader/: geometry.hlsl  geoshader.sprj  vertex.hlsl
examples/isPicked/: ispicked.sprj
examples/model/: model.sprj
examples/outline/: outline.sprj
examples/rasterizer/: rasterizer.sprj
examples/rt/: pixel2d.hlsl  rt.sprj
examples/simple/: imgui.ini  simple.sprj  test.sprj  vertex.hlsl
examples/texture/: texture.sprj
libs/ImFileDialog/: ImFileDialog.cpp  ImFileDialog.h
libs/ImGuiFileDialog/: ImGuiFileDialog.cpp  ImGuiFileDialog.h  ImGuiFileDialog_LICENSE.txt  README.txt  dirent_LICENSE.txt
libs/SPIRVCross/: spirv_cross.cpp  spirv_cross_util.cpp  spirv_cross_util.hpp  spirv_glsl.cpp
libs/cppdap/: CMakeLists.txt  license-checker.cfg
libs/dds/: dds.c
libs/ghc/: LICENSE.txt  filesystem.hpp  fs_std.hpp  fs_std_fwd.hpp  fs_std_impl.hpp
libs/imgui_markdown/: License.txt  README.md  imgui_markdown.h
libs/miniz/: zip_file.hpp
libs/misc/: INIReader.h  ImFileDialog.cpp  dds.c  dds.h  stb_image_resize.h  stb_vorbis.c  zip_file.hpp
libs/nativefiledialog/: nfd_common.c  nfd_gtk.c  nfd_win.cpp  nfd_zenity.c  simple_exec.h
libs/stb/: stb_image.h  stb_image_write.h
libs/tinyfiledialogs/: hello.c  hello_wchar_t.c
pugixml/: pugixml.cpp  pugixml.hpp
src/SHADERed/: EditorEngine.cpp  EditorEngine.h  GUIManager.cpp  GUIManager.h  InterfaceManager.cpp  InterfaceManager.h  Options.h  nv_dds.cpp  nv_dds.h
template/: pixel.hlsl  template.sprj  vertex.hlsl
templates/DeferredRendering/: template.sprj
templates/GLSL/: pixel.frag  template.sprj
templates/HLSL/: template.sprj
templates/ShaderToy/: pixel.frag  template.sprj
templates/Texture/: template.sprj
themes/: cherry.ini  corporategray.ini  dracula.ini  gray.ini  lightgreen.ini
(+232 files in other folders)
